# Archon

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: BIM_Modeller_Build_Spec_Part_1.md
kaggle_upload/comparison/: comparison_subset_500.jsonl  dataset-metadata.json
kaggle_upload/full/: dataset-metadata.json
sam/evaluation/: quick_score.py
sam/training/: evaluate_comparison.py  summarize_comparison.py  tokenize_and_cache.py  train_sam.py
