[project]
name = "bim-modeller"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.44",
    "peft>=0.12",
    "bitsandbytes>=0.43",
    "trl>=0.10",
    "datasets>=2.20",
    "accelerate>=0.33",
    "shapely>=2.0",
    "pydantic>=2.8",
    "fastapi>=0.112",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
